# raining-jobs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mechanism.drawio
.shci/linux/: build-output.txt  build.sh  info.txt  log.md  prerequisites-output.txt  prerequisites.sh
.shci/windows/: build-output.txt  build.bat  info.txt  log.md
docs/: int-example.md  int-example.txt
examples/src/: cpu-threads.c  gpu-compute.c  raining-example.c
raining-jobs/include/raining-jobs/: rainingJobs.h
raining-jobs/src/: rainingJobs.c
raining-threads/include/raining-threads/: rainingThreads.h
raining-threads/src/: rainingThreads.c
